--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compile group: 'org.apache.poi', name: 'poi', version: '3.9'
+	implementation 'org.apache.poi:poi-ooxml:3.17'
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
 	compileOnly 'org.projectlombok:lombok'
