--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp:1.5.8.RELEASE'
+//	implementation 'org.springframework.cloud:spring-cloud-stream:2.2.1.RELEASE'
+//	implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit:2.2.1.RELEASE'
 	implementation 'org.apache.poi:poi-ooxml:3.17'
 	compile('io.springfox:springfox-swagger2:2.9.2')
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
