--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: update
   rabbitmq:
-    host: 172.16.0.13
+    host: localhost
     port: 5672
     username: guest
     password: guest
