--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,11 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation('io.cucumber:cucumber-java8:4.7.2')
+	testImplementation('io.cucumber:cucumber-spring:4.7.2')
+	testImplementation('io.cucumber:cucumber-junit:4.7.2')
 }
 
 test {
-	useJUnitPlatform()
+//	useJUnitPlatform()
 }
